# api-registro-produtos

./: .env.prod  README.md  main.py  pyproject.toml  requirements.txt  testes.py
app/: config.py  data.py  schemas.py
tests/: test_api.py
